terraf/privateroutetable.tf
//  "aws_eip" "nat_eip" {
//domain = "vpc"
// }

//resource "aws_nat_gateway" "nat_gateway" {
//allocation_id = aws_eip.nat_eip.id
//subnet_id     = aws_subnet.first_public.id

//tags = {
//Name = "NAT Gateway"
//}
//}

resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.my_vpc.id

  //route {
  //cidr_block     = "0.0.0.0/0"
  //nat_gateway_id = aws_nat_gateway.nat_gateway.id
  //}

  tags = {
    Name = "Private Route Table"
  }
}
